fix: restored scrollbars for body content (#110)

--- a/apps/provider/src/styles/layout/_base.scss
+++ b/apps/provider/src/styles/layout/_base.scss
@@ -109,12 +109,6 @@ app-root:empty::after {
         height: 100%;
         overflow-y: auto;
 
-        -ms-overflow-style: none;  /* IE and Edge */
-        scrollbar-width: none;  /* Firefox */
-
-        &::-webkit-scrollbar {
-          display: none;
-        }
         // @media #{$xlarge-and-up} {
         //   @include horizontal-margin-right(-15px);
         // }
